codeocean/spec/testcasedatajava/IncompatibleTypesTest.txt
./org/example/RecursiveMath.java:12: error: incompatible types: String cannot be converted to int
        power(a,s);
                ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
make: *** [Makefile:5: test] Error 1
